# SemProject

./: CMakeLists.txt  library.cpp  library.h
TestFile/: CMakeLists.txt  main.cpp
TestFile/cmake/: Findlibrary.cmake
